--- a/index.html
+++ b/index.html
@@ -973,9 +973,9 @@
             const visitCountText = visitCount ? `<span style="color:#13ca5e;"><strong>【ご来店回数】</strong></span><br>・${visitCount}` : '・来店回数が未選択です';
             const selectedMenuText = selectedMenu ? `<span style="color:#13ca5e;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
 
-            const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>・')}`
-                : '・メニューが未選択です';
+const selectedSymptomText = selectedSymptom.length > 0
+    ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.map(item => `《${item.category}》${item.name}`).join('<br>・')}`
+    : '・メニューが未選択です';
 
             const irradiationsText = irradiationsCount
                 ? `<span style="color:#13ca5e;"><strong>【オプション】</strong></span><br>・${irradiationsCount.split(', ').join('<br>・')}`
@@ -1336,11 +1336,18 @@ if (selectedSymptom && selectedSymptom.length > 0) {
                 return;
             }
 
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-            }]).then(() => {
+// selectedSymptomを文字列に整形
+const selectedSymptomText = formData.selectedSymptom
+  ? formData.selectedSymptom.map(item => `《${item.category}》${item.name}`).join('\n')
+  : 'メニュー未選択';
+
+// irradiationsCountの整形（nullチェック）
+const irradiationsText = formData.irradiationsCount || 'なし';
+
+liff.sendMessages([{
+    type: 'text',
+    text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：\n${selectedSymptomText}\nオプション：\n${irradiationsText}\n希望日時：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+}]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
                 /* LIFFウィンドウを閉じる */
