--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@ if (selectedSymptom && selectedSymptom.length > 0) {
 
 // selectedSymptomを文字列に整形
 const selectedSymptomText = formData.selectedSymptom
-  ? formData.selectedSymptom.map(item => `《${item.category}》${item.name}`).join('\n')
+  ? formData.selectedSymptom.map(item => `《${item.category}》${item.name}`).join(',')
   : 'メニュー未選択';
 
 // irradiationsCountの整形（nullチェック）
