--- a/index.html
+++ b/index.html
@@ -1357,10 +1357,11 @@ if (selectedSymptom && selectedSymptom.length > 0) {
                 return;
             }
 
-// selectedSymptomを文字列に整形
-const selectedSymptomText = formData.selectedSymptom
-  ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
-  : 'メニュー未選択';
+const selectedSymptomText = selectedSymptom.length > 0
+    ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${
+        selectedSymptom.map(symptom => `《${symptom.category}》${symptom.name}`).join('<br>・')
+      }`
+    : '・メニューが未選択です';
 
 // irradiationsCountの整形（nullチェック）
 const irradiationsText = formData.irradiationsCount || 'なし';
