--- a/index.html
+++ b/index.html
@@ -749,7 +749,6 @@
         </div>
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-        <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます<br>デモなので全て60分で設定されています</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('release')">痛くない筋膜リリース</button>
             <button type="button" onclick="showMenu('removal')">美肌脱毛</button>
@@ -997,7 +996,7 @@ const selectedSymptomText = selectedSymptom.length > 0
         <hr>
         <div class="info-row">
             <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('whitening');">修正する</button>
+            <button class="edit-button" onclick="scrollToElement('release'); scrollToElement('removal'); scrollToElement('acupuncture'); scrollToElement('mugwort'); scrollToElement('herbs'); scrollToElement('facial');">修正する</button>
         </div>
         <hr>
         <div class="info-row">
