--- a/index.html
+++ b/index.html
@@ -1361,8 +1361,7 @@ if (selectedSymptom && selectedSymptom.length > 0) {
                 phone: document.getElementById('phone').value.trim(),
                 visitCount: visitCount,
                 nominationCount: nominationCount,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom.join("、") : null, // 「、」で区切る
-                irradiationsCount: irradiationsCount,
+                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
                 dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
                 message: document.getElementById('message').value.trim()
             };
@@ -1395,6 +1394,7 @@ const selectedSymptomText = formData.selectedSymptom
 
 // irradiationsCountの整形（nullチェック）
 const irradiationsText = formData.irradiationsCount || 'なし';
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
