--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【当院に通ってくれている理由】\n・${formData.message}\n\n【通院をやめた理由】\n・${formData.message2}\n\n【要望・ご意見】\n・${formData.message3}\n\n【年代】\n・${formData.priorityCount}\n\n【通院状態】\n・${formData.chanceCount}\n\n【症状】\n・${formData.demandCount}`
+                text: `≪アンケート≫\n【年代】\n・${formData.priorityCount}\n\n【症状】\n・${formData.demandCount}\n\n【通院状態】\n・${formData.chanceCount}\n【当院に通ってくれている理由】\n・${formData.message}\n\n【通院をやめた理由】\n・${formData.message2}\n\n【要望・ご意見】\n・${formData.message3}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。');
