--- a/index.html
+++ b/index.html
@@ -1667,7 +1667,7 @@ if (selectedSymptom && selectedSymptom.length > 0) {
 
 // selectedSymptomを文字列に整形
 const selectedSymptomText = formData.selectedSymptom
-  ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+  ? formData.selectedSymptom.map(item => `${item.name}`).join('\n・')
   : 'メニュー未選択';
 
 // irradiationsCountの整形（nullチェック）
@@ -1676,7 +1676,7 @@ const irradiationsText = formData.irradiationsCount || 'なし';
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${selectedSymptomText}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n【メニュー】\n・${selectedSymptomText}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
