--- a/index.html
+++ b/index.html
@@ -860,6 +860,21 @@
     background-color: #ff4f4f;
 }
 
+.labelContent {
+    display: block;
+    margin-top: 10px; /* ← これを追加 */
+    margin-bottom: 10px;
+    padding: 3px;
+    font-weight: 600;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 6px;
+    font-size: 18px;
+    text-align: center;
+    text-indent: 0px;
+    position: relative;
+    overflow: hidden;
+}
     </style>
 </head>
 
@@ -1032,7 +1047,7 @@
         </div>
 
 
-        <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">ご予約内容</div>
@@ -1679,7 +1694,7 @@ const irradiationsText = formData.irradiationsCount || 'なし';
                 text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\n【メニュー】\n・${selectedSymptomText}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+                alert('当日キャンセルは無いようにお願いいたします。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
