--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             box-sizing: border-box;
         }
 
+        .snsphoto-buttons,
         .store-buttons,
         .priority-buttons,
         .demand-buttons,
@@ -77,6 +78,7 @@
             margin-bottom: 20px;
         }
 
+        .snsphoto-buttons button,
         .store-buttons button,
         .priority-buttons button,
         .demand-buttons button,
@@ -96,6 +98,7 @@
             white-space: nowrap;
         }
 
+        .snsphoto-buttons button.active,
         .store-buttons button.active,
         .priority-buttons button.active,
         .demand-buttons button.active,
