--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #7e6c86;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #7e6c86, #7e6c86);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -140,7 +140,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -164,12 +164,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #7e6c86;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #7e6c86;
         }
 
         input[type="text"],
@@ -299,7 +299,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             color: #fff;
         }
 
@@ -543,7 +543,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -606,7 +606,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #7e6c86;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -615,7 +615,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -631,11 +631,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #dc3545;
+            background-color: #06c755;
         }
 
         .submit-button:hover {
-            background-color: #c82333;
+            background-color: #06c755;
         }
 
         @media (max-width: 768px) {
@@ -684,7 +684,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #7e6c86;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -787,7 +787,7 @@
   margin-top: 12px;
   padding: 12px 16px;
   background-color: #f5f5f5;
-  border-left: 4px solid #4caf50;
+  border-left: 4px solid #7e6c86;
   border-radius: 6px;
   font-size: 16px;
   color: #333;
@@ -820,7 +820,7 @@
     margin-bottom: 1px; /* 下に10pxのスペースをあける（余白） */
     padding: 3px; /* 内側に3pxのスペースをつける（中身がくっつかないように） */
     font-weight: 600; /* 文字を少し太くする（600は太さの目安） */
-    background-color: #13ca5e; /* 背景の色をくすんだ緑にする */
+    background-color: #7e6c86; /* 背景の色をくすんだ緑にする */
     color: white; /* 文字の色を白にする */
     border-radius: 6px; /* 角を6pxだけ丸くする（ふんわりした見た目に） */
     font-size: 20px; /* 文字の大きさを18pxにする（ちょっと大きめ） */
@@ -866,7 +866,7 @@
     margin-bottom: 10px;
     padding: 3px;
     font-weight: 600;
-    background-color: #13ca5e;
+    background-color: #7e6c86;
     color: white;
     border-radius: 6px;
     font-size: 18px;
@@ -897,7 +897,7 @@
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">ご性別<span class="required">必須</span></div>
+        <div class="label">来店回数<span class="required">必須</span></div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">初回</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">再来店</button>
@@ -1360,6 +1360,8 @@ const selectedSymptomText = selectedSymptom.length > 0
                 selectedMenuTime = 0;
                 selectedSymptom = null;
                 menuPrice = 0;
+                treatmentText.style.display = 'none';
+                return; // ここで処理を終了
             } else {
                 // 選択された各ボタンについて処理
 updatedSelectedButtons.forEach((btn) => {
