--- a/index.html
+++ b/index.html
@@ -1197,11 +1197,6 @@ if (hasBubunDatsumou) {
         repairLabel.insertAdjacentElement("afterend", repairButtons);
         repairLabel.style.display = 'block';
         repairButtons.style.display = 'flex';
-
-        bubunButton.insertAdjacentElement("afterend", baindLabel);
-        baindLabel.insertAdjacentElement("afterend", baindButtons);
-        baindLabel.style.display = 'block';
-        baindButtons.style.display = 'flex';
     }
 } else {
     // 表示を完全に非表示に
@@ -1219,10 +1214,7 @@ if (hasBubunDatsumou) {
                 treatmentText.style.display = 'none';
                 // repairButtons も非表示にする
                 repairLabel.style.display = 'none';
-                repairButtons.style.display = 'none';
-                // repairButtons も非表示にする
-                baindLabel.style.display = 'none';
-                rbaindButtons.style.display = 'none';
+                repairButtons.style.display = 'none';s
                 return; // ここで処理を終了
             } else {
                 // 1つだけ選択状態にする
