--- a/index.html
+++ b/index.html
@@ -1471,7 +1471,7 @@ if (hasBubunDatsumou) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご来店回数：${formData.visitCount}\n\n高校生以下ですか？：${formData.highschoolCount}\n\nメニュー：${formData.selectedSymptom},${irradiationsText}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\nご来店回数：${formData.visitCount}\n\n高校生以下ですか？：${formData.highschoolCount}\n\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
