--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@ if (hasBubunDatsumou) {
             // 選択されたオプションを取得
             const selectedButtons = document.querySelectorAll('.irradiations button.active');
             const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-            irradiationsCount = selectedIrradiations.join('≪部分脱毛選択≫\n・');
+            irradiationsCount = selectedIrradiations.join('≪部分脱毛選択≫\n');
 
             // すべてのオプションの価格を再計算
             optionsPrice = 0; // 全体をリセットして再計算
