--- a/index.html
+++ b/index.html
@@ -1177,9 +1177,6 @@ const selectedSymptoms = Array.from(updatedSelectedButtons).map(btn => btn.textC
 const repairLabel = document.getElementById('repairLabel');
 const repairButtons = document.getElementById('repairButtons');
 
-const baindLabel = document.getElementById('baindLabel');
-const baindButtons = document.getElementById('baindButtons');
-
 // 「部分脱毛」が含まれているか
 const hasBubunDatsumou = selectedSymptoms.includes('部分脱毛');
 
@@ -1196,8 +1193,6 @@ if (hasBubunDatsumou) {
     // 表示を完全に非表示に
     repairLabel.style.display = 'none';
     repairButtons.style.display = 'none';
-    baindLabel.style.display = 'none';
-    baindButtons.style.display = 'none';
 }
 
             if (updatedSelectedButtons.length === 0) {
@@ -1293,7 +1288,7 @@ if (hasBubunDatsumou) {
             // 選択されたオプションを取得
             const selectedButtons = document.querySelectorAll('.irradiations button.active');
             const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-            irradiationsCount = selectedIrradiations.join('≪部分脱毛選択≫\n');
+            irradiationsCount = selectedIrradiations.join('≪部分脱毛選択≫\n・');
 
             // すべてのオプションの価格を再計算
             optionsPrice = 0; // 全体をリセットして再計算
