--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@ if (hasBubunDatsumou) {
             // 選択されたオプションを取得
             const selectedButtons = document.querySelectorAll('.irradiations button.active');
             const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-            irradiationsCount = selectedIrradiations.join('≪部分脱毛選択≫\n・');
+            irradiationsCount = selectedIrradiations.join('\n・');
 
             // すべてのオプションの価格を再計算
             optionsPrice = 0; // 全体をリセットして再計算
@@ -1466,7 +1466,7 @@ if (hasBubunDatsumou) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪お名前：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪ご来店回数≫：${formData.visitCount}\n\n≪高校生以下ですか？≫：${formData.highschoolCount}\n\n≪メニュー≫\n・${formData.selectedSymptom},\n${formData.irradiationsCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n≪お名前：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪ご来店回数≫：${formData.visitCount}\n\n≪高校生以下ですか？≫：${formData.highschoolCount}\n\n≪メニュー≫\n・${formData.selectedSymptom}\n・${formData.irradiationsCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
